--- a/sensorFaces/pom.xml
+++ b/sensorFaces/pom.xml
@@ -8,6 +8,20 @@
     <artifactId>Sensor</artifactId>
     <version>0.1b</version>
 
+    <repositories>
+        <repository>
+            <id>central</id>
+            <name>Maven Repository Switchboard</name>
+            <url>https://repo1.maven.org/maven2</url>
+        </repository>
+
+        <repository>
+            <id>prime-repo</id>
+            <name>PrimeFaces Maven Repository</name>
+            <url>https://repository.primefaces.org</url>
+        </repository>
+    </repositories>
+
     <packaging>war</packaging>
     <build>
         <plugins>
@@ -23,12 +37,12 @@
     </build>
 
     <properties>
-        <primefaces-version>6.0</primefaces-version>
+        <primefaces-version>14.0.0</primefaces-version>
         <!-- Web -->
         <jsp.version>2.2</jsp.version>
         <jstl.version>1.2</jstl.version>
         <servlet.version>3.1.0</servlet.version>
-        <spring-framework.version>4.2.6.RELEASE</spring-framework.version>
+        <spring-framework.version>6.1.8</spring-framework.version>
         <log4j.version>1.2.17</log4j.version>
         <slf4j.version>1.7.21</slf4j.version>
         <logback.version>1.1.7</logback.version>
@@ -44,7 +58,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.7</version>
+            <version>2.11.0</version>
         </dependency>
 
         <dependency>
@@ -53,11 +67,16 @@
             <version>1.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>javax.faces</artifactId>
-            <version>2.2.10</version>
+            <version>2.4.0</version>
         </dependency>
 
         <!--Primefaces library-->
@@ -76,7 +95,6 @@
             <version>1.0.10</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.webjars.bower/jquery -->
-
 
 
         <dependency>
@@ -144,13 +162,6 @@
 
     <!--Primefaces repository. Need to download themes-->
     <!--Репозиторий primefaces. Нужно указать, чтобы можно было скачивать различные темы оформления компонентов-->
-    <repositories>
-        <repository>
-            <id>prime-repo</id>
-            <name>PrimeFaces Maven Repository</name>
-            <url>http://repository.primefaces.org</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
+
 
 </project>
